fix: resolve linter issues in GitHub Actions - install golangci-lint directly and handle main function conflict

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,10 +57,9 @@ jobs:
         go mod tidy
 
     - name: Run linter
-      uses: golangci/golangci-lint-action@v3
-      with:
-        version: latest
-        args: --timeout=5m --skip-files="test-6000-requests-go.go"
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+        $(go env GOPATH)/bin/golangci-lint run --timeout=5m --skip-files="test-6000-requests-go.go"
 
     - name: Run tests
       run: |
@@ -81,8 +80,12 @@ jobs:
 
     - name: Build application
       run: |
+        # Temporarily move test file to avoid main function conflict
+        mv test-6000-requests-go.go test-6000-requests-go.go.bak || true
         go build -o url-shortener .
         CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o url-shortener-linux .
+        # Restore test file
+        mv test-6000-requests-go.go.bak test-6000-requests-go.go || true
 
     - name: Run integration tests
       run: |
