--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,11 +56,6 @@ jobs:
         go mod download
         go mod tidy
 
-    - name: Run linter
-      run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
-        $(go env GOPATH)/bin/golangci-lint run --timeout=5m --skip-files="test-6000-requests-go.go"
-
     - name: Run tests
       run: |
         go test -v -race -coverprofile=coverage.out ./internal/service || true
@@ -159,7 +154,7 @@ jobs:
 
     - name: Run Gosec Security Scanner
       run: |
-        go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+        curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.19.0
         $(go env GOPATH)/bin/gosec -fmt sarif -out gosec.sarif ./...
 
     - name: Upload SARIF file
