--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,8 +154,11 @@ jobs:
 
     - name: Run Gosec Security Scanner
       run: |
-        curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.19.0
-        $(go env GOPATH)/bin/gosec -fmt sarif -out gosec.sarif ./...
+        # Download and install gosec
+        wget -O gosec.tar.gz https://github.com/securecodewarrior/gosec/releases/download/v2.19.0/gosec_2.19.0_linux_amd64.tar.gz
+        tar -xzf gosec.tar.gz
+        chmod +x gosec
+        ./gosec -fmt sarif -out gosec.sarif ./...
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
