--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,5 +1,7 @@
 # API Configuration
-VITE_API_URL=http://localhost:8080
+VITE_API_BASE_URL=http://localhost:8080
 
 # Environment
 VITE_ENV=development
+VITE_APP_TITLE=URL Shortener
+VITE_APP_VERSION=1.0.0
