--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -54,13 +54,16 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
-        # API proxy (if needed)
+        # API proxy to backend
         location /api/ {
-            proxy_pass http://backend:8080;
+            proxy_pass http://app:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
 
         # Health check endpoint
