--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
       - name: url-shortener
         image: url-shortener:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
         env:
