--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -56,7 +56,7 @@ http {
 
         # API proxy to backend
         location /api/ {
-            proxy_pass http://app:8080;
+            proxy_pass http://url-shortener-service:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
