--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -15,10 +15,17 @@ spec:
   - host: your-domain.com
     http:
       paths:
-      - path: /
+      - path: /api
         pathType: Prefix
         backend:
           service:
             name: url-shortener-service
+            port:
+              number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: url-shortener-frontend-service
             port:
               number: 80
